--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "expo": "^51.0.8",
     "expo-font": "~12.0.5",
     "expo-image-picker": "~15.0.5",
